trying to remove unnessary

--- a/Rough.ipynb
+++ b/Rough.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "d1bf0844",
    "metadata": {},
    "outputs": [],
@@ -1482,8 +1482,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "90553c6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0ab147c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>home</th>\n",
+       "      <th>status</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>swag</td>\n",
+       "      <td>jhinti</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sonu</td>\n",
+       "      <td>nuapatana</td>\n",
+       "      <td>NIT</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sim</td>\n",
+       "      <td>sarakana</td>\n",
+       "      <td>PW</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>sup</td>\n",
+       "      <td>jasuapur</td>\n",
+       "      <td>bse</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   name       home status  id\n",
+       "0  swag     jhinti   12th   1\n",
+       "1  sonu  nuapatana    NIT   4\n",
+       "2   sim   sarakana     PW   3\n",
+       "3   sup   jasuapur    bse  10"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=pd.read_csv('frds.csv')\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7fee9bb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'22nd centuri , parapleg marin dispatch moon pandora uniqu mission , becom torn follow order protect alien civil . action adventur fantasi sciencefict cultureclash futur spacewar spacecoloni societi spacetravel futurist romanc space alien tribe alienplanet cgi marin soldier battl loveaffair antiwar powerrel mindandsoul 3d samworthington zoesaldana sigourneyweav stephenlang jamescameron'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y=pd.read_csv('tmdb5kPrePData.csv')\n",
+    "y.loc[0,'tags']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7ba5c9f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bannn']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=[{'over':'bannn'},{'gf':'me'}]\n",
+    "y=[x[0]['over']]\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a934b3a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sonusahoo', 'supreet']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=['sonu sahoo','sup reet']\n",
+    "y=(lambda x:[i.replace(\" \",\"\") for i in x])\n",
+    "x=y(x)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a29cffe9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['s', 'o', 'n', 'u']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=['s','o']\n",
+    "y=['n','u']\n",
+    "z=x+y\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "696c59d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s o n u'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z=' '.join(z)\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c7ee679c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4806</th>\n",
+       "      <td>872585</td>\n",
+       "      <td>Oppenheimer</td>\n",
+       "      <td>stori j. robert oppenheim ’ role develop atom ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4807</th>\n",
+       "      <td>346698</td>\n",
+       "      <td>Barbie</td>\n",
+       "      <td>barbi ken time live color seemingli perfect wo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4808</th>\n",
+       "      <td>615656</td>\n",
+       "      <td>Meg 2: The Trench</td>\n",
+       "      <td>exploratori dive deepest depth ocean dare rese...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4809</th>\n",
+       "      <td>569094</td>\n",
+       "      <td>Spider-Man: Across the Spider-Verse</td>\n",
+       "      <td>reunit gwen staci , brooklyn ’ full-tim , frie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4810</th>\n",
+       "      <td>697843</td>\n",
+       "      <td>Extraction 2</td>\n",
+       "      <td>task extract famili merci georgian gangster , ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      movie_id                                title  \\\n",
+       "4806    872585                          Oppenheimer   \n",
+       "4807    346698                               Barbie   \n",
+       "4808    615656                    Meg 2: The Trench   \n",
+       "4809    569094  Spider-Man: Across the Spider-Verse   \n",
+       "4810    697843                         Extraction 2   \n",
+       "\n",
+       "                                                   tags  \n",
+       "4806  stori j. robert oppenheim ’ role develop atom ...  \n",
+       "4807  barbi ken time live color seemingli perfect wo...  \n",
+       "4808  exploratori dive deepest depth ocean dare rese...  \n",
+       "4809  reunit gwen staci , brooklyn ’ full-tim , frie...  \n",
+       "4810  task extract famili merci georgian gangster , ...  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=pd.read_csv('tmdb5kPrePData.csv')\n",
+    "x.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e841fc1a",
    "metadata": {},
    "outputs": [],
    "source": []
