--- a/newdataentry.ipynb
+++ b/newdataentry.ipynb
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "id": "f991fe5d",
    "metadata": {},
    "outputs": [],
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "id": "033c877e",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
        "2   sim   sarakana     PW   3"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "id": "09c73170",
    "metadata": {},
    "outputs": [],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "id": "dbc91600",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
        "2   sim   sarakana     PW   3"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "id": "a4259e2f",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
        "['swag', 'sonu', 'sim']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,17 +731,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "id": "5171496d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cinpon(frdname,List):\n",
+    "def cinpon(frdname):\n",
     "    # Collect data 1st here\n",
-    "    if frdname in List:\n",
+    "    if frdname in names:\n",
     "        print('yes')\n",
     "    else:\n",
-    "        newfrdData={'name':frdname,'home':'nuapatana','status':'NIT','id':4}\n",
+    "        newfrdData={'name':frdname,'home':'jasuapur','status':'bse','id':10}\n",
     "        new_data=pd.Series(newfrdData)\n",
     "        data.loc[len(data)]=new_data\n",
     "#         cinpon('abulu',names)\n",
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "id": "d6aa905c",
    "metadata": {},
    "outputs": [
@@ -765,12 +765,12 @@
     }
    ],
    "source": [
-    "cinpon('swag',names)\n"
+    "cinpon('swag')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "id": "c2c40d66",
    "metadata": {},
    "outputs": [],
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "id": "f89afedb",
    "metadata": {},
    "outputs": [
@@ -838,16 +838,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>sup</td>\n",
-       "      <td>nuapatana</td>\n",
-       "      <td>NIT</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>swag</td>\n",
-       "      <td>nuapatana</td>\n",
-       "      <td>NIT</td>\n",
-       "      <td>4</td>\n",
+       "      <td>jasuapur</td>\n",
+       "      <td>bse</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -858,11 +851,10 @@
        "0  swag     jhinti   12th   1\n",
        "1  sonu  nuapatana    NIT   4\n",
        "2   sim   sarakana     PW   3\n",
-       "3   sup  nuapatana    NIT   4\n",
-       "4  swag  nuapatana    NIT   4"
+       "3   sup   jasuapur    bse  10"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
