arrenging code properly

--- a/Rough.ipynb
+++ b/Rough.ipynb
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "c7ee679c",
    "metadata": {},
    "outputs": [
@@ -1724,12 +1724,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4806</th>\n",
-       "      <td>872585</td>\n",
-       "      <td>Oppenheimer</td>\n",
-       "      <td>stori j. robert oppenheim ’ role develop atom ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4807</th>\n",
        "      <td>346698</td>\n",
        "      <td>Barbie</td>\n",
@@ -1753,27 +1747,33 @@
        "      <td>Extraction 2</td>\n",
        "      <td>task extract famili merci georgian gangster , ...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4811</th>\n",
+       "      <td>545609</td>\n",
+       "      <td>Extraction</td>\n",
+       "      <td>tyler rake , fearless mercenari offer servic b...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "      movie_id                                title  \\\n",
-       "4806    872585                          Oppenheimer   \n",
        "4807    346698                               Barbie   \n",
        "4808    615656                    Meg 2: The Trench   \n",
        "4809    569094  Spider-Man: Across the Spider-Verse   \n",
        "4810    697843                         Extraction 2   \n",
+       "4811    545609                           Extraction   \n",
        "\n",
        "                                                   tags  \n",
-       "4806  stori j. robert oppenheim ’ role develop atom ...  \n",
        "4807  barbi ken time live color seemingli perfect wo...  \n",
        "4808  exploratori dive deepest depth ocean dare rese...  \n",
        "4809  reunit gwen staci , brooklyn ’ full-tim , frie...  \n",
-       "4810  task extract famili merci georgian gangster , ...  "
+       "4810  task extract famili merci georgian gangster , ...  \n",
+       "4811  tyler rake , fearless mercenari offer servic b...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,8 +1785,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e841fc1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Avatar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Avengers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Titanic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jurassic World</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Lion King</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            title\n",
+       "0          Avatar\n",
+       "1    The Avengers\n",
+       "2         Titanic\n",
+       "3  Jurassic World\n",
+       "4   The Lion King"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mvd=pd.DataFrame({'title':['Avatar','The Avengers','Titanic','Jurassic World','The Lion King']})\n",
+    "mvd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "aa870f1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_url = \"https://api.themoviedb.org/3/search/movie\"\n",
+    "api_key = \"32d52a38f77b039c8394a09b7e1b67d3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "45f9af26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests as req\n",
+    "def fetchImage(name):\n",
+    "    url='https://api.themoviedb.org/3/search/movie?query='+name+'&api_key=32d52a38f77b039c8394a09b7e1b67d3'\n",
+    "    response=req.get(url)\n",
+    "    if response.status_code==200:\n",
+    "        json=response.json()\n",
+    "        results=json['results']\n",
+    "        poster_path=results[0]['poster_path']\n",
+    "        imageurl='https://image.tmdb.org/t/p/w342'+poster_path\n",
+    "        return imageurl\n",
+    "    else:\n",
+    "        return \"error\"\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d0c5038f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mvd['imageurl']=mvd['title'].apply(fetchImage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "361fe7d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>imageurl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>https://image.tmdb.org/t/p/w342/kyeqWdyUXW608q...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Avengers</td>\n",
+       "      <td>https://image.tmdb.org/t/p/w342/RYMX2wcKCBAr24...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Titanic</td>\n",
+       "      <td>https://image.tmdb.org/t/p/w342/9xjZS2rlVxm8SF...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jurassic World</td>\n",
+       "      <td>https://image.tmdb.org/t/p/w342/A0LZHXUzo5C60O...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Lion King</td>\n",
+       "      <td>https://image.tmdb.org/t/p/w342/dzBtMocZuJbjLO...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            title                                           imageurl\n",
+       "0          Avatar  https://image.tmdb.org/t/p/w342/kyeqWdyUXW608q...\n",
+       "1    The Avengers  https://image.tmdb.org/t/p/w342/RYMX2wcKCBAr24...\n",
+       "2         Titanic  https://image.tmdb.org/t/p/w342/9xjZS2rlVxm8SF...\n",
+       "3  Jurassic World  https://image.tmdb.org/t/p/w342/A0LZHXUzo5C60O...\n",
+       "4   The Lion King  https://image.tmdb.org/t/p/w342/dzBtMocZuJbjLO..."
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mvd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d475c8b",
    "metadata": {},
    "outputs": [],
    "source": []
