--- a/Movie_Mentor.ipynb
+++ b/Movie_Mentor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "id": "8ccabfc8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "id": "bdb6a0a1",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "'[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"name\": \"Fantasy\"}, {\"id\": 878, \"name\": \"Science Fiction\"}]'"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,12 +36,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "id": "ffc4a10c",
    "metadata": {},
    "outputs": [],
    "source": [
     "movies=movies.merge(credits,on='title')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5151b911",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4809 entries, 0 to 4808\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   budget                4809 non-null   int64  \n",
+      " 1   genres                4809 non-null   object \n",
+      " 2   homepage              1713 non-null   object \n",
+      " 3   id                    4809 non-null   int64  \n",
+      " 4   keywords              4809 non-null   object \n",
+      " 5   original_language     4809 non-null   object \n",
+      " 6   original_title        4809 non-null   object \n",
+      " 7   overview              4806 non-null   object \n",
+      " 8   popularity            4809 non-null   float64\n",
+      " 9   production_companies  4809 non-null   object \n",
+      " 10  production_countries  4809 non-null   object \n",
+      " 11  release_date          4808 non-null   object \n",
+      " 12  revenue               4809 non-null   int64  \n",
+      " 13  runtime               4807 non-null   float64\n",
+      " 14  spoken_languages      4809 non-null   object \n",
+      " 15  status                4809 non-null   object \n",
+      " 16  tagline               3965 non-null   object \n",
+      " 17  title                 4809 non-null   object \n",
+      " 18  vote_average          4809 non-null   float64\n",
+      " 19  vote_count            4809 non-null   int64  \n",
+      " 20  movie_id              4809 non-null   int64  \n",
+      " 21  cast                  4809 non-null   object \n",
+      " 22  crew                  4809 non-null   object \n",
+      "dtypes: float64(3), int64(5), object(15)\n",
+      "memory usage: 864.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "movies.info()"
    ]
   },
   {
