--- a/Rough.ipynb
+++ b/Rough.ipynb
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "c7ee679c",
    "metadata": {},
    "outputs": [
@@ -1724,24 +1724,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4807</th>\n",
-       "      <td>346698</td>\n",
-       "      <td>Barbie</td>\n",
-       "      <td>barbi ken time live color seemingli perfect wo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4808</th>\n",
-       "      <td>615656</td>\n",
-       "      <td>Meg 2: The Trench</td>\n",
-       "      <td>exploratori dive deepest depth ocean dare rese...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4809</th>\n",
-       "      <td>569094</td>\n",
-       "      <td>Spider-Man: Across the Spider-Verse</td>\n",
-       "      <td>reunit gwen staci , brooklyn ’ full-tim , frie...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4810</th>\n",
        "      <td>697843</td>\n",
        "      <td>Extraction 2</td>\n",
@@ -1753,27 +1735,45 @@
        "      <td>Extraction</td>\n",
        "      <td>tyler rake , fearless mercenari offer servic b...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4812</th>\n",
+       "      <td>206487</td>\n",
+       "      <td>Predestination</td>\n",
+       "      <td>predestin chronicl life tempor agent sent intr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4813</th>\n",
+       "      <td>76600</td>\n",
+       "      <td>Avatar: The Way of Water</td>\n",
+       "      <td>set decad event first film , learn stori sulli...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4814</th>\n",
+       "      <td>298618</td>\n",
+       "      <td>The Flash</td>\n",
+       "      <td>attempt save famili inadvert alter futur , bar...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      movie_id                                title  \\\n",
-       "4807    346698                               Barbie   \n",
-       "4808    615656                    Meg 2: The Trench   \n",
-       "4809    569094  Spider-Man: Across the Spider-Verse   \n",
-       "4810    697843                         Extraction 2   \n",
-       "4811    545609                           Extraction   \n",
+       "      movie_id                     title  \\\n",
+       "4810    697843              Extraction 2   \n",
+       "4811    545609                Extraction   \n",
+       "4812    206487            Predestination   \n",
+       "4813     76600  Avatar: The Way of Water   \n",
+       "4814    298618                 The Flash   \n",
        "\n",
        "                                                   tags  \n",
-       "4807  barbi ken time live color seemingli perfect wo...  \n",
-       "4808  exploratori dive deepest depth ocean dare rese...  \n",
-       "4809  reunit gwen staci , brooklyn ’ full-tim , frie...  \n",
        "4810  task extract famili merci georgian gangster , ...  \n",
-       "4811  tyler rake , fearless mercenari offer servic b...  "
+       "4811  tyler rake , fearless mercenari offer servic b...  \n",
+       "4812  predestin chronicl life tempor agent sent intr...  \n",
+       "4813  set decad event first film , learn stori sulli...  \n",
+       "4814  attempt save famili inadvert alter futur , bar...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
